fix spacing spacing in footer items

--- a/source/sass/master.sass
+++ b/source/sass/master.sass
@@ -40,7 +40,7 @@ body
   position: relative
 
 .animates
-  transition: opacity 300ms ease-in-out
+  transition: opacity 400ms ease-in
 
 .disappear
   opacity: 0
@@ -112,7 +112,7 @@ body
   background-color: $tomato
 
 .projects__project:last-of-type
-  margin-bottom: 3rem
+  margin-bottom: 4rem
 
 .project__image
   flex: 1
@@ -147,9 +147,14 @@ body
   background-color: $tomato
   display: flex
   flex-wrap: wrap
+  padding: .5rem
 
-// .contact__link:first-of-type
-//   margin-left: 1rem
+.contact__header
+  width: 100vw
+  text-align: center
+
+//.contact__link:first-of-type
+  margin-left: 1rem
 .contact__link
   background-color: white
   padding: 1rem
@@ -157,8 +162,8 @@ body
   border: 5px solid $dark-gray
   display: flex
   align-items: center
-  flex-grow: 1
-  margin: 1rem
+  flex: 1 1 auto
+  margin: .5rem
   justify-content: center
 
 
